Ajout de différentes versions d’HyperTexte

--- a/www/layouts/shortcodes/keymap-list.html
+++ b/www/layouts/shortcodes/keymap-list.html
@@ -27,6 +27,9 @@
     "ergaie"      "Ergaie"
     "erglace_nuke"   "Erglace (nuke)"
     "hypertexte_1dk" "HyperTexte-1dk"
+    "hypertexte_1dk_v2" "HyperTexte-1dk v2"
+    "hypertxt_analyse" "HyperTexte Standard — Analyse"
+    "hypertxt" "HyperTexte Standard"
     "optergol"    "Optergol"
   )
 
