Tests personnels de layouts Ergopti

--- a/www/layouts/shortcodes/keymap-list.html
+++ b/www/layouts/shortcodes/keymap-list.html
@@ -21,15 +21,21 @@
     "bepo"        "Bépo"
   )
 
+  "ergopti" (dict
+    "ergo_1dk_v1.1.3" "Ergopti 1DK v1.1.3"
+    "ergo_1dk_v2.0.0" "Ergopti 1DK v2.0.0"
+    "ergo_1dk_v2.1.0" "Ergopti 1DK v2.1.0"
+    "ergo_1dk_v2.1.1" "Ergopti 1DK v2.1.1"
+    "ergopti_v1.1.3_analyse" "Ergopti v1.1.3"
+    "ergopti_v2.0.0_analyse" "Ergopti v2.0.0"
+    "ergopti_v2.1.0_analyse" "Ergopti v2.1.0"
+  )
+
   "fr.contrib" (dict
     "beopy"       "Béopy"
     "beopy-l"     "Béopy‑L"
     "ergaie"      "Ergaie"
     "erglace_nuke"   "Erglace (nuke)"
-    "hypertexte_1dk" "HyperTexte-1dk"
-    "hypertexte_1dk_v2" "HyperTexte-1dk v2"
-    "hypertxt_analyse" "HyperTexte Standard — Analyse"
-    "hypertxt" "HyperTexte Standard"
     "optergol"    "Optergol"
   )
 
